# HomeTask2

./: CMakeLists.txt  IPv4test.cpp  README.md  ips.txt  main.cpp
.github/workflows/: release.yml
IPv4/: Address.cpp  Address.h  CMakeLists.txt
ParserIPv4/: CMakeLists.txt  ParserIPv4.cpp  ParserIPv4.h
